2008-12-03	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/shutdown.c: Change "Log off" text to "Log out" to be
	  consistent with the rest of the UI.

2008-11-27	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: On suspend/hibernate, ignore errors
	  of type DBUS_GERROR_NO_REPLY, not type _TIMEOUT (bug 4628).

2008-11-27	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in: Check for pwd.h and getpwuid ().
	* xfce4-session/shutdown.c: Display the currently logged-in user
	  in a label in the shutdown dialog (bug 3083).

2008-11-15	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-startup.c: Be sure to properly signal that
	  startup is complete when running from the failsafe session.

2008-11-15	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: Fix autostart getting run twice when
	  the failsafe session is used (bug 4486).

2008-11-14  Stephan Arts <stephan@xfce.org>

	* NEWS, po/POTFILES.in, configure.in.in: Update files for 4.6 beta2
	  release

2008-11-12	Brian Tarricone <bjt23@cornell.edu>

	* settings/main.c: Hook up Help button.
	* settings/xfce4-session-settings.glade: Fix Help button response
	  and button order.
	* settings/xfce-session-settings.desktop.in: Mark dialog as
	  supporting startup notification.

2008-11-06	Brian Tarricone <bjt23@cornell.edu>

	* settings/xfce4-session.xml: Add xfce4-settings-helper to the
	  default failsafe session.

2008-11-06	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: Fix a problem: client
	  requests interaction -> client is granted interaction ->
	  but now SM kills all other apps.  If the client then requests
	  that the shutdown is canceled, the SM doesn't listen, and
	  even if it did, nothing else would be running (including the
	  WM).  Problem was in xfsm_manager_check_clients_saving(): it
	  didn't consider a client waiting for interaction or interaction
	  to be saving (bug 4284).

2008-11-06	Brian Tarricone <bjt23@cornell.edu>
