@@ -1,3 +1,8 @@
+2008-12-26	Brian Tarricone <bjt23@cornell.edu>
+
+	* engines/balou/config.c: Use xfce_message_dialog() instead of
+	  xfce_err(), fix string a bit.
+
 2008-12-03	Brian Tarricone <bjt23@cornell.edu>
 
 	* xfce4-session/shutdown.c: Change "Log off" text to "Log out" to be
